# libvirt-mcp-server

./: .gitignore  DEVELOPMENT_GUIDE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  SECURITY.md  TYPER_LOGURU_MIGRATION.md  config.example.yaml  debug_xml.py  docker-compose.yml  env.example  pyproject.toml  run_server.py  test_vm_creation.py
.cursor/rules/: design.mdc  python-uv.mdc
deployment/: install.sh
deployment/systemd/: libvirt-mcp-server.service
examples/: basic_usage.py  create_vm_with_cdrom.py  vm_lifecycle_management.py  vm_management.py
libvirt_mcp_server/: __init__.py  cli.py  config.py  exceptions.py  libvirt_client.py  logging.py  models.py  security.py  server.py  tools.py  xml_templates.py
tests/: __init__.py  test_config.py  test_new_features.py  test_security.py
